kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarot-frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: test-frontend
        image: zaptapped/tarot-frontend:v1.0.2
        ports:
          - name: frontend
            containerPort: 3000
      imagePullSecrets: 
        - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: tarot-frontend-service
spec:
  selector:
    app: frontend
  ports:
  - name: frontend
    port: 80
    targetPort: 80
