kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tarot-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tarot.catdadservices.com
    secretName: catdadservices-tls
  rules:
  - host: tarot.catdadservices.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tarot-backend-service
            port:
              name: backend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tarot-frontend-service
            port:
              name: frontend
  - host: tarot.localdev.test
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tarot-backend-service
            port:
              name: backend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tarot-frontend-service
            port:
              name: frontend
